k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  database-deployment
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image:  postgres:14
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 200Mi
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: dbdata
          mountPath: /var/lib/postgresql/data
          subPath: pgdata
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: db-volume
      restartPolicy: Always
