k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
  - name: postgres-srv
    protocol: TCP
    port: 7000
    targetPort: 5432
