k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  # annotations:
  #   dev.okteto.com/auto-ingress: "true"
spec:
  selector:
    app: flask
  type: ClusterIP
  ports:
  - name: flask-srv
    protocol: TCP
    port: 7777
    targetPort: 5000
